# misis2024s-23-04-zinov-k-a

./: CMakeLists.txt  codeforces.id  status.md
prj.app/: rr.cpp
prj.app.rtf/: rr.hpp
prj.codeforces/: 0004c.cpp  0032b.cpp  0041a.cpp  0043a.cpp  0050a.cpp  0059a.cpp  0071a.cpp  0096a.cpp  0116a.cpp  0158a.cpp  0231a.cpp  0276c fail.cpp  0279b.cpp  0282a.cpp  0339a.cpp  0455a.cpp  0466a.cpp  0479a.cpp  0499b.cpp  0520b.cpp  1669a.cpp  1669b.cpp  1669c.cpp  1670a.cpp  1676b.cpp  1721b.cpp  1734a.cpp  1734c.cpp  1744a.cpp  1744c.cpp  1851b.cpp  1855a.cpp  1856a.cpp  1866a.cpp  1873a.cpp  1873b.cpp  CMakeLists.txt
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp  test_stackarr.cpp
